--- a/charts/motive-cronjob/templates/external-secrets.yaml
+++ b/charts/motive-cronjob/templates/external-secrets.yaml
@@ -1,3 +1,4 @@
+{{- if (.Capabilities.APIVersions.Has "external-secrets.io/v1beta1") }}
 {{- range .Values.externalSecrets.externalSecrets }}
 ---
 apiVersion: external-secrets.io/v1beta1
@@ -45,8 +46,13 @@ spec:
 
     immutable: {{ .targetImmutable | default false }}
 
+    {{- with .targetTemplateData }}
     # Specify a blueprint for the resulting Kind=Secret
-    # template: {}
+    template:
+      engineVersion: v2
+      data:
+        {{- toYaml . | nindent 8 }}
+    {{- end }}
 
   {{- with .data }}
   # Data defines the connection between the Kubernetes Secret keys and the Provider data
@@ -60,4 +66,5 @@ spec:
   dataFrom:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+{{- end }}
 {{- end }}
