--- a/charts/motive-service/values.yaml
+++ b/charts/motive-service/values.yaml
@@ -541,6 +541,9 @@ metrics:
       slackChannelInfo: ""
       slackChannelWarning: ""
       slackChannelCritical: ""
+      zeroPods:
+        enabled: true
+        for: 0m
       kafka:
         enabled: false
         deadLetter:
