chore: update PodDisruptionBudget and alerting rules for autoscaling conditions

--- a/charts/motive-service/templates/prometheus-rule-alerting.yaml
+++ b/charts/motive-service/templates/prometheus-rule-alerting.yaml
@@ -20,9 +20,21 @@ metadata:
 spec:
   groups:
     # default alerts - START
+    {{- if and
+      (or
+        (and .Values.service.autoscaling.enabled (gt (.Values.service.autoscaling.minReplicas | int) 0))
+        (and .Values.service.keda.enabled (gt (.Values.service.keda.minReplicas | int) 0))
+        (and (not .Values.service.autoscaling.enabled) (not .Values.service.keda.enabled) (gt (.Values.service.replicaCount | int) 0))
+      )
+      (.Values.metrics.prometheusRule.defaultAlerts.zeroPods.enabled)
+    }}
     - name: {{ include "motive-service.fullname" . }}-default-alerting
       rules:
-        {{- if gt (.Values.service.replicaCount | int) 1 }}
+        {{- if or
+          (and .Values.service.autoscaling.enabled (gt (.Values.service.autoscaling.minReplicas | int) 1))
+          (and .Values.service.keda.enabled (gt (.Values.service.keda.minReplicas | int) 1))
+          (and (not .Values.service.autoscaling.enabled) (not .Values.service.keda.enabled) (gt (.Values.service.replicaCount | int) 1))
+        }}
         - alert: HighAvailability-{{ include "motive-service.fullname" . }}
           expr: sum(kube_pod_status_ready{namespace="{{ $.Release.Namespace }}", pod=~"{{ include "motive-service.fullname" . }}-.+", condition="true"}) < 2
           for: 10m
@@ -42,7 +54,14 @@ spec:
             description: 'Service reports having not enough pods to ensure High Availability'
         {{- end }}
 
-        {{- if and (gt (.Values.service.replicaCount | int) 0) (.Values.metrics.prometheusRule.defaultAlerts.zeroPods.enabled) }}
+        {{- if and
+          (or
+            (and .Values.service.autoscaling.enabled (gt (.Values.service.autoscaling.minReplicas | int) 0))
+            (and .Values.service.keda.enabled (gt (.Values.service.keda.minReplicas | int) 0))
+            (and (not .Values.service.autoscaling.enabled) (not .Values.service.keda.enabled) (gt (.Values.service.replicaCount | int) 0))
+          )
+          (.Values.metrics.prometheusRule.defaultAlerts.zeroPods.enabled)
+        }}
         - alert: ZeroPods-{{ include "motive-service.fullname" . }}
           expr: sum(kube_pod_status_ready{namespace="{{ $.Release.Namespace }}", pod=~"{{ include "motive-service.fullname" . }}-.+", condition="true"}) == 0
           for: {{ .Values.metrics.prometheusRule.defaultAlerts.zeroPods.for }}
@@ -61,6 +80,7 @@ spec:
             summary: 'Number of Pods == 0'
             description: 'Service reports no pods running'
         {{- end }}
+    {{- end }}
     # default alerts - END
 
     # Kafka default alerts - START
