--- a/charts/motive-service/templates/pdb.yaml
+++ b/charts/motive-service/templates/pdb.yaml
@@ -1,4 +1,8 @@
-{{- if or (and .Values.service.autoscaling.enabled (gt (.Values.service.autoscaling.minReplicas | int) 1)) (and .Values.service.keda.enabled (gt (.Values.service.keda.minReplicas | int) 1)) (and (not .Values.service.autoscaling.enabled) (gt (.Values.service.replicaCount | int) 1)) }}
+{{- if or
+  (and .Values.service.autoscaling.enabled (gt (.Values.service.autoscaling.minReplicas | int) 1))
+  (and .Values.service.keda.enabled (gt (.Values.service.keda.minReplicas | int) 1))
+  (and (not .Values.service.autoscaling.enabled) (.Values.service.keda.enabled) (gt (.Values.service.replicaCount | int) 1))
+}}
 apiVersion: {{ ternary "policy/v1" "policy/v1beta1" (semverCompare ">=1.21.0-0" .Capabilities.KubeVersion.Version) }}
 kind: PodDisruptionBudget
 metadata:
