chore: Change SLO alert names and disable ZeroPods alert by default

--- a/charts/motive-service/templates/slos-bool.yaml
+++ b/charts/motive-service/templates/slos-bool.yaml
@@ -20,7 +20,7 @@ metadata:
 spec:
   {{- $alerting := .alerting | default (dict) }}
   alerting:
-    name: {{ $alerting.name | default "ErrorBudgetBurn" }}
+    name: {{ include "motive-service.fullname" . }} - {{ $alerting.name | default "ErrorBudgetBurn" }}
     absent: {{ $alerting.absent | default true }}
     burnrates: {{ $alerting.burnrates | default true }}
     disabled: {{ $alerting.disabled | default false }}
