--- a/charts/motive-service/templates/prometheus-rule-alerting.yaml
+++ b/charts/motive-service/templates/prometheus-rule-alerting.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.metrics.enabled .Values.metrics.prometheusRule.enabled (.Capabilities.APIVersions.Has "monitoring.coreos.com/v1") (or (.Values.metrics.prometheusRule.defaultAlerts.kafka.enabled  .Values.metrics.prometheusRule.defaultAlerts.zeroPods.enabled)) -}}
+{{- if and .Values.metrics.enabled .Values.metrics.prometheusRule.enabled (.Capabilities.APIVersions.Has "monitoring.coreos.com/v1") (or (.Values.metrics.prometheusRule.defaultAlerts.kafka.enabled)  (.Values.metrics.prometheusRule.defaultAlerts.zeroPods.enabled)) -}}
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
